Set proper card paddings for each tab; Made oveview section scrollable; Fixed 'last updated' text bug on mobile

--- a/app/assets/stylesheets/partials/_reports.scss
+++ b/app/assets/stylesheets/partials/_reports.scss
@@ -35,7 +35,7 @@
 .w-40px { width: 40px; }
 .w-48px { width: 48px; }
 .w-90px { width: 90px; }
-.w-240px { width: 164px; }
+.w-200px { width: 200px; }
 .w-100pt { width: 100%; }
 .mw-100pt { max-width: 100%; }
 // Height
@@ -54,6 +54,7 @@
 .mr-4px { margin-right: 4px; }
 .mr-8px { margin-right: 8px; }
 .pb-8px { padding-bottom: 8px; }
+.pb-16px { padding-bottom: 16px; }
 .pl-16px { padding-left: 16px; }
 .pl-24px { padding-left: 24px; }
 .pt-16px { padding-top: 16px; }
